ingress/nginx-ingress/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
       app: app-1
    spec:
      containers:
      - name: my-app-1
        image: techcloudifyme/my-app-1:v2
        ports:
        - containerPort: 80	
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: LoadBalancer
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
