ingress/nginx-ingress/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
       app: app-2
    spec:
      containers:
      - name: my-app-2
        image: techcloudifyme/my-app-2:v2
        ports:
        - containerPort: 80	
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: LoadBalancer
  selector:
    app: app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
